fix: corrected by design mock-up

--- a/packages/community/src/pages/index.astro
+++ b/packages/community/src/pages/index.astro
@@ -37,13 +37,18 @@ import Background from "../components/Background.astro"
 				</div>
 			</section>
 			<section class="relative grid grid-cols-12 py-24 gap-10">
-				<div class="absolute left-0 top-12 font-bold text-red-50 text-7xl -z-10">What is Comni.pl?</div>
+				<div class="absolute left-0 top-8 font-bold text-red-50 text-8xl -z-10">What is Comni.pl?</div>
 				<div class="col-span-4 col-start-2">
 					<h2 class="text-4xl font-bold">Q. Comni.plって？</h2>
 				</div>
-				<div class="font-medium text-lg col-span-6 leading-relaxed tracking-wide text-neutral-600">
-					<p>プログラミング・デザイン・映像制作・音楽......<br />「comni.pl」はクリエイティブな活動をテーマに、"やってみたい！"が見つかる場所<br />Discord Botなどを駆使した便利で居心地の良いコミュニティをあなたに！<br />雑談から質問・相談、LTなどのイベントも開催してるよ！</p>
+				<div class="font-medium text-lg col-span-6">
+					<div class="text-neutral-600 leading-relaxed tracking-wide mb-12">
+						<p>プログラミング・デザイン・映像制作・音楽......<br />「comni.pl」はクリエイティブな活動をテーマに、"やってみたい！"が見つかる場所<br />Discord Botなどを駆使した便利で居心地の良いコミュニティをあなたに！<br />雑談から質問・相談、LTなどのイベントも開催してるよ！</p>
 					<p>そして...みんなの活動の課題をエンジニアリングの力で解決しませんか？<br />ちょっぴり便利なツールやサービスも一緒に開発していきます！</p>
+					</div>
+					<div>
+						<h2 class="text-6xl font-bold"><span class="block text-2xl font-bold mb-2">A. 全てのクリエーターを応援する、</span>Discordコミュニティ</h2>
+					</div>
 				</div>
 			</section>
 		</main>
